@startuml

title __S's Class Diagram__\n

  namespace designPatterns.solid.s {
    class designPatterns.solid.s.Invoice {
        - quantity : int
        + Invoice()
        + calculateTotal()
    }
  }
  

  namespace designPatterns.solid.s {
    class designPatterns.solid.s.InvoiceDao {
        + InvoiceDao()
        + saveToDB()
    }
  }
  

  namespace designPatterns.solid.s {
    class designPatterns.solid.s.InvoicePrinter {
        + InvoicePrinter()
        + printInvoice()
    }
  }
  

  namespace designPatterns.solid.s {
    class designPatterns.solid.s.Main {
        {static} + main()
    }
  }
  

  namespace designPatterns.solid.s {
    class designPatterns.solid.s.Marker {
        - color : String
        - manufactureYear : int
        - name : String
        - price : int
        + Marker()
        + Marker()
        + getColor()
        + getManufactureYear()
        + getName()
        + getPrice()
        + setColor()
        + setManufactureYear()
        + setName()
        + setPrice()
    }
  }
  

  designPatterns.solid.s.Invoice o-- designPatterns.solid.s.Marker : marker
  designPatterns.solid.s.InvoiceDao o-- designPatterns.solid.s.Invoice : invoice
  designPatterns.solid.s.InvoicePrinter o-- designPatterns.solid.s.Invoice : invoice


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
